Created basic layout, need to add projects and work on styling

--- a/index.html
+++ b/index.html
@@ -10,19 +10,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="container">
-      <div class="card-white" id="introduction">
-        <h1>Hello, I'm Bradley</h1>
+
+    <div class="banner" style="background-image: url(https://image.freepik.com/free-photo/programming-code-abstract-technology-background-software-developer-computer-script_34663-31.jpg);">
+      <divs id="introduction">
+        <h1>Hello, my name is Bradley, Im a Full-Stack Developer</h1>
         <img src="images/bradley.jpg" class="img-circle" alt="Bradley Scott">
+        <h2>About me</h2>
         <p>These are my first steps into a larger world and my first steps into becoming a programmer! I like video games, movies, fencing, and all things pop-culture. I enjoy creating stories as much as I do hearing one.</p>
-        <a href="#" class="btn-salmon">Click Me</a>
       </div>
+
       <div class="card-white">
+        <h2>Projects I've worked on</h2>
+        </div>
+      </div>
+      <div>
+      <div class="cards">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+          Socialite
+        </div>
+      
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/lunch.jpg)">
+          AirBnB Clone
+        </div>
+      
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
+          Beer Takeway app
+        </div>
+      </div>
+    </div>
+      <div class="footer">
         <h2>Follow me</h2>
         <ul class="list-inline">
           <li><a href="https://www.facebook.com/bradley.pettyfitzmaurice" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-          <li><a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-          <li><a href="https://github.com/bradpfm/profile" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/bradley-petty-fitzmaurice" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="https://github.com/bradpfm" target="_blank"><i class="fab fa-github"></i></a></li>
         </ul>
       </div>
     </div>
