--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module" src="application.js"></script>
+    <script type="module"  src="https://bradpfm.github.io/porftolio/application.js"></script>
   </head>
   <body>
       <div id="introduction">  
@@ -16,7 +16,7 @@
       </div>
       <div class="banner">
         <img src="images/bradley.jpg" class="img-circle"  alt="Bradley Scott">
-        <p> Originally hailing from the great city of Oxford, I spent most of my life hopping back and forth over the atlantic.
+        <p> Originally born in the UK , I spent most of my life hopping back and forth over the atlantic.
         Between the sunny beaches of Florida and the dreary skies of England Ive met many people grown to appreciate the differences in the human experience.
         </br>
         </br>
