--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module"  src="https://bradpfm.github.io/porftolio/application.js"></script>
+    <script type="module"  src="https://bradpfm.github.io/application.js">
+    </script>
   </head>
   <body>
       <div id="introduction">  
