--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module"  src="https://bradpfm.github.io/application.js">
+    <script type="module"  src="application.js">
     </script>
   </head>
   <body>
