--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module"  src="application.js">
-    </script>
+    <script type="module"  src="application.js"></script>
   </head>
   <body>
       <div id="introduction">  
