--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
       <div id="introduction">  
-        <h1> <span id="banner-typed-text"></span></h1>
+        <h1>Hello I'm Bradley, I'm a Full Stack Developer <span id="banner-typed-text"></span></h1>
       </div>
       <div class="banner">
         <img src="images/bradley.jpg" class="img-circle"  alt="Bradley Scott">
